--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://juankmatiz03.github.io/moviesAapp.github.io",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build --base=/moviesApp/",
+    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
